[tool.poetry]
name = "geotag-photos"
version = "0.1.0"
description = ""
authors = ["Francisco-Pierre Puig <puig.franciscopierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
