[tool.poetry]
name = "geotag"
version = "0.1.0"
description = "Use your Google location history data to add GPS EXIF metadata to your photos"
authors = ["Francisco-Pierre Puig <puig.franciscopierre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
nb_black = "^1.0.7"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"

[tool.poetry.scripts]
geotag = "geotag.geotag:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
